Added lombok and hibernate. Created basic CRUD operations